--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "url": "https://github.com/contentful-userland/gatsby-contentful-starter/issues"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "env-cmd": "^10.1.0",
+    "framer-motion": "^2.3.0",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-source-contentful": "^2.2.9",
+    "gatsby-source-contentful": "^2.3.35",
     "gatsby-transformer-remark": "^2.7.3",
     "gatsby-transformer-sharp": "^2.4.6",
     "lodash": "^4.17.15",
@@ -49,7 +53,7 @@
   },
   "scripts": {
     "dev": "npm run develop",
-    "develop": "gatsby develop",
+    "develop": "env-cmd gatsby develop",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md' 'bin/*.js'",
